fix search spacing and update intro section

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -78,7 +78,7 @@ html, body {
 
   &>.search {
     position: relative;
-    margin: 18px 24px;
+    margin: 18px 12px 18px 24px;
 
     input {
       background: $nav-bg;
@@ -86,7 +86,7 @@ html, body {
       border-color: $search-box-border-color;
       padding: 6px 0 6px 20px;
       box-sizing: border-box;
-      margin: $nav-v-padding $nav-padding;
+      margin: 10px 12px 10px 0;
       width: 100%;
       outline: none;
       color: $nav-text;
@@ -323,7 +323,8 @@ html, body {
     float:left;
     color: $lang-select-text;
     text-decoration: none;
-    padding: 36px;
+    padding: 35px;
+    font-size: 14px;
     line-height: 0;
     outline: 0;
     border-bottom:4px solid transparent;
@@ -431,6 +432,15 @@ html, body {
 
   h4, h5, h6 {
     font-size: 10px;
+  }
+
+  a {
+    color: #000;
+    font-weight: bold;
+
+    &:hover {
+      color: #24aef2;
+    }
   }
 
   hr {
@@ -719,10 +729,14 @@ html, body {
   h1 {
     @extend %header-font;
     font-weight: normal;
-    font-size: 30px;
-    padding-top: 1.5em;
-    width: auto;
-    padding: .5em 28px 1.5em;
+    font-size: 20px;
+    font-family: "StyreneA-Bold";
+    color: #fff;
+    width: calc(60% - 28px);
+    padding: 24px 0 24px 28px;
+    margin-bottom: 0;
+    background-image: -webkit-gradient(linear,left top,right top,from(#24aef2),to(#f224f2));
+    background-image: linear-gradient(to right,#24aef2,#f224f2);
   }
 }
 
